tests/ui/proc-macro/load-panic-backtrace.stderr
at $DIR/auxiliary/test-macros.rs:43:5:
panic-derive
error: proc-macro derive panicked
  --> $DIR/load-panic-backtrace.rs:11:10
   |
LL | #[derive(Panic)]
   |          ^^^^^
   |
   = help: message: panic-derive

error: aborting due to previous error

